--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "farooqui786-todo-list",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "creating simple todo list",
-  "main": "todo.ts",
+  "main": "todos.js",
   "type": "module",
+  "publishConfig": {"access": "public"},
+  "bin": "todos.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
